Fix content on smaller displays

--- a/src/components/faq/_styles.css
+++ b/src/components/faq/_styles.css
@@ -7,6 +7,10 @@
   padding: 40px 65px;
   max-width: 620px;
   width: 70%;
+
+  @media (max-width: 620px) {
+    padding: 40px 40px;
+  }
 }
 
 .faq__header {
